// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`database tests / user formatUserRow 1`] = `
Object {
  "UUID": "valid-uuid",
  "email": "email",
  "hashedPassword": "valid-hashed-password",
  "id": 2,
  "phoneNumber": "+358400000000",
  "timestamp": Object {
    "createdAt": "2021-03-12T11:16:56.000+00:00",
    "updatedAt": null,
  },
  "username": "username",
}
`;

exports[`database tests / user formatUserRow updated 1`] = `
Object {
  "UUID": "valid-uuid",
  "email": "email",
  "hashedPassword": "valid-hashed-password",
  "id": 2,
  "phoneNumber": "+358400000000",
  "timestamp": Object {
    "createdAt": "2021-03-12T11:16:56.000+00:00",
    "updatedAt": "2021-03-12T11:16:56.000+00:00",
  },
  "username": "username",
}
`;
